--- a/package.json
+++ b/package.json
@@ -11,5 +11,16 @@
     "q": "~1.0.0",
     "graceful-fs": "~2.0.2",
     "concat-stream": "~1.4.3"
+  },
+  "devDependencies": {
+    "tape": "^2.12.0",
+    "rimraf": "^2.2.6",
+    "istanbul": "^0.2.6",
+    "jshint": "^2.4.4"
+  },
+  "scripts": {
+    "test": "tape test/*.js",
+    "cover": "istanbul cover tape -- test/*.js",
+    "lint": "jshint -c .jshintrc tasks/"
   }
 }
