--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "name": "Poornima Venkatakrishnan",
     "email": "pvenkatakrishnan@paypal.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/krakenjs/grunt-localizr"
+  },
   "dependencies": {
     "localizr": "git://github.com/totherik/localizr.git",
     "mkdirp": "~0.3.5",
