--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tape": "^2.12.0",
     "rimraf": "^2.2.6",
     "istanbul": "^0.2.6",
-    "jshint": "^2.4.4"
+    "jshint": "^2.4.4",
+    "grunt": "^0.4.4"
   },
   "scripts": {
     "test": "tape test/*.js",
