--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 
 node_js:
-  - '0.10'
+  - "0.11"
+  - "0.10"
 
-before_script:
-  - npm install -g bower
-  - npm install -g grunt-cli
+script:
+  - "npm run-script cover"
+  - "npm run-script lint"
