--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "qlimit": "^0.1.1"
   },
   "devDependencies": {
-    "tape": "^2.12.0",
-    "rimraf": "^2.2.6",
+    "grunt": "^0.4.4",
+    "grunt-force-task": "^1.0.0",
     "istanbul": "^0.2.6",
     "jshint": "^2.4.4",
-    "grunt": "^0.4.4"
+    "rimraf": "^2.2.6",
+    "tape": "^2.12.0"
   },
   "scripts": {
     "test": "tape test/*.js",
