--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bluebird": "^2.9.3",
     "concat-stream": "~1.4.3",
-    "graceful-fs": "~2.0.2",
+    "graceful-fs": "^2.0.3",
     "localizr": "~0.1.0",
     "mkdirp": "~0.3.5",
     "qlimit": "^0.1.1"
