--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bluebird": "^2.9.3",
     "concat-stream": "~1.4.3",
     "graceful-fs": "^2.0.3",
-    "localizr": "~0.1.0",
+    "localizr": "^1.0.0",
     "mkdirp": "~0.3.5",
     "qlimit": "^0.1.1"
   },
